2005-02-21  Tim Jenness  <tjenness@cpan.org>

	---- RELEASE V0.10 to CPAN ----

2005-02-18  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm: Rewrite the rise/set iterative code to
	handle all cases properly. Add new parameter "event" to control
	whether the nearest, previous or next rise/set time should be
	returned.

2005-02-16  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Angle.pm (_guess_units): Use Scalar::Util to
	determine whether the supplied string is a number. Now requires
	Scalar::Util v1.13

2005-02-14  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* lib/Astro/Coords/Angle.pm, lib/Astro/Coords/Angle/Hour.pm:
	Change default delimiter to the colon character to maintain
	backwards compatibility with v0.05.

2005-02-04  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm (_iterative_el): Fix case when moon almost
	sets but doesn't quite make it (thanks for bug report from Beat
	Vontobel)

2005-01-05  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Equatorial.pm: Can not use vdiff in the radec
	method since vdiff requires the radec.

2004-12-09  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm: Add preliminary support for radial
	velocities and velocity frames. Add doppler correction
	calculation.

2004-12-08  Tim Jenness  <tjenness@cpan.org>

	* t/coco.t: Finish test comparison with coco for simple B1950
	coordinate	

	* lib/Astro/Coords.pm (native): Add native() method to keep track
	of original form.

2004-12-07  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm: Use Astro::Coords::Angle[::Hour] for all
	return values that return angles. Make public methods for
	returning pairs of coordinates (azel, radec,apparent).

	* lib/Astro/Coords.pm: Add radec1950 method

2004-12-04  Tim Jenness  <tjenness@cpan.org>

	* t/angle.t: Add tests for Angle classes
	
2004-11-21  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Planet.pm: Add diam() method to return the